Ex2/deploy/web-test-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-test-app-service
spec:
  selector:
    app: web-test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
