Ex2/deploy/web-test-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-test-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web-test-app.localkube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-test-app-service
            port:
              number: 80
